--- a/payments/payment.html
+++ b/payments/payment.html
@@ -4176,7 +4176,7 @@
                                                                       class="_hgs47m"
                                                                     >
                                                                       <div
-                                                                        class="_ni9axhe"
+                                                                        class="va-middle"
                                                                       >
                                                                         <div>
                                                                           <div
@@ -4234,7 +4234,7 @@
                                                                         </div>
                                                                       </div>
                                                                       <div
-                                                                        class="_ni9axhe"
+                                                                        class="va-middle"
                                                                       >
                                                                         <span
                                                                           class="_1s9o8so5"
@@ -4242,7 +4242,7 @@
                                                                             class="_nncr1bm"
                                                                           >
                                                                             <div
-                                                                              class="_ni9axhe"
+                                                                              class="va-middle"
                                                                             >
                                                                               <svg
                                                                                 viewBox="0 0 52 52"
@@ -4303,7 +4303,7 @@
                                                                       class="_hgs47m"
                                                                     >
                                                                       <div
-                                                                        class="_ni9axhe"
+                                                                        class="va-middle"
                                                                       >
                                                                         <div>
                                                                           <div
@@ -4347,7 +4347,7 @@
                                                                         </div>
                                                                       </div>
                                                                       <div
-                                                                        class="_ni9axhe"
+                                                                        class="va-middle"
                                                                       >
                                                                         <span
                                                                           class="_6h56b0p"
@@ -4355,7 +4355,7 @@
                                                                             class="_nncr1bm"
                                                                           >
                                                                             <div
-                                                                              class="_ni9axhe"
+                                                                              class="va-middle"
                                                                             >
                                                                               <svg
                                                                                 viewBox="0 0 52 52"
@@ -4397,7 +4397,7 @@
                                                                       class="_hgs47m"
                                                                     >
                                                                       <div
-                                                                        class="_ni9axhe"
+                                                                        class="va-middle"
                                                                       >
                                                                         <div>
                                                                           <div
@@ -4462,7 +4462,7 @@
                                                                         </span>
                                                                       </div>
                                                                       <div
-                                                                        class="_ni9axhe"
+                                                                        class="va-middle"
                                                                       >
                                                                         <span
                                                                           class="_6h56b0p"
@@ -4470,7 +4470,7 @@
                                                                             class="_nncr1bm"
                                                                           >
                                                                             <div
-                                                                              class="_ni9axhe"
+                                                                              class="va-middle"
                                                                             >
                                                                               <svg
                                                                                 viewBox="0 0 52 52"
