--- a/submission/discounts.html
+++ b/submission/discounts.html
@@ -1123,7 +1123,7 @@
                                           <div class="_137u52jb">
                                            <div class="_ncmdki">
                                             <div class="_55316h" style="visibility: visible; height: 46px;">
-                                             <div class="_nncr1bm"><div class="_ni9axhe">PHP</div></div>
+                                             <div class="_nncr1bm"><div class="va-middle">PHP</div></div>
                                             </div>
                                            </div>
                                            <div class="_178faes"><input class="_14fdu48d" disabled="" id="unused_form_element_1_0" name="unused_form_element_1_0" type="text" value="1600.00" /></div>
@@ -1168,7 +1168,7 @@
                                           <div class="_137u52jb">
                                            <div class="_ncmdki">
                                             <div class="_55316h" style="visibility: visible; height: 46px;">
-                                             <div class="_nncr1bm"><div class="_ni9axhe">PHP</div></div>
+                                             <div class="_nncr1bm"><div class="va-middle">PHP</div></div>
                                             </div>
                                            </div>
                                            <div class="_178faes"><input class="_14fdu48d" disabled="" id="unused_form_element_2_0" name="unused_form_element_2_0" type="text" value="1280.00" /></div>
