--- a/account/edit-photo.html
+++ b/account/edit-photo.html
@@ -843,7 +843,7 @@
                <div class="_ckio8me">
                 <div class="_ncmdki">
                  <div class="_e5ldu0s" style="visibility: visible; height: 34px;">
-                  <div class="_nncr1bm">
+                  <div class="va-container-v">
                    <div class="cell-middle">
                     <div class="_1iti0ju">
                      <svg viewBox="0 0 24 24" role="presentation" aria-hidden="true" focusable="false" style="height: 16px; width: 16px; display: block; fill: rgb(118, 118, 118);">
