--- a/payments/payment.html
+++ b/payments/payment.html
@@ -4093,7 +4093,7 @@
                                                                 class="payment-option__selection-wrapper"
                                                               >
                                                                 <div
-                                                                  class="va-container-vv"
+                                                                  class="va-container-v"
                                                                 >
                                                                   <div
                                                                     class="cell-middle"
@@ -4239,7 +4239,7 @@
                                                                         <span
                                                                           class="_1s9o8so5"
                                                                           ><div
-                                                                            class="_nncr1bm"
+                                                                            class="va-container-v"
                                                                           >
                                                                             <div
                                                                               class="va-middle"
@@ -4352,7 +4352,7 @@
                                                                         <span
                                                                           class="_6h56b0p"
                                                                           ><div
-                                                                            class="_nncr1bm"
+                                                                            class="va-container-v"
                                                                           >
                                                                             <div
                                                                               class="va-middle"
@@ -4467,7 +4467,7 @@
                                                                         <span
                                                                           class="_6h56b0p"
                                                                           ><div
-                                                                            class="_nncr1bm"
+                                                                            class="va-container-v"
                                                                           >
                                                                             <div
                                                                               class="va-middle"
