--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1140,7 +1140,7 @@
                                                   height: 46px;
                                                 "
                                               >
-                                                <div class="va-container-vv">
+                                                <div class="va-container-v">
                                                   <div class="cell-middle">
                                                     INR
                                                   </div>
