--- a/payments/resolutions_3.html
+++ b/payments/resolutions_3.html
@@ -382,7 +382,7 @@
                                       type="hidden"
                                       value="0GK1hkGg1kPGJ4rea4DKyNApow5"
                                     /><span class="payment-option__selection-wrapper"
-                                      ><div class="va-container-vv">
+                                      ><div class="va-container-v">
                                         <div class="cell-middle">
                                           <div
                                             class="payment-option__selection-wrapper-icon"
