--- a/payments/payment.html
+++ b/payments/payment.html
@@ -1344,7 +1344,7 @@
                                             <div data-plugin-in-point-id="PROFILE_PHOTO" data-section-id="PROFILE_PHOTO" style="padding-bottom: 24px;">
                                               <div class="_b7b6bk">
                                                 <div class="_1qyi2pa">
-                                                  <div class="_1khi3900">
+                                                  <div class="font-extrabold">
                                                     <div class="_5kaapu">Profile photo</div>
                                                   </div>
                                                   <div class="_o7c33ig">Hosts want to know who’s staying at their place.</div>
@@ -4756,7 +4756,7 @@
                                             <div data-plugin-in-point-id="PROFILE_PHOTO" data-section-id="PROFILE_PHOTO" style="padding-bottom: 24px;">
                                               <div class="_b7b6bk">
                                                 <div class="_1qyi2pa">
-                                                  <div class="_1khi3900">
+                                                  <div class="font-extrabold">
                                                     <div class="_5kaapu">Profile photo</div>
                                                   </div>
                                                   <div class="_o7c33ig">Hosts want to know who’s staying at their place.</div>
