--- a/payments/payment.html
+++ b/payments/payment.html
@@ -13183,7 +13183,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                       </div>
                     </div>
                     <div class="_167h82a">
-                      <span data-testid="dot-loader" class="_l7ztla"
+                      <span data-testid="dot-loader" class="skeleton__dots"
                         ><span class="_mr5az14"></span
                         ><span class="_1pphas65"></span
                         ><span class="_1x9afh0x"></span
