breadcrumb__text-secondary

--- a/help/ticket-selection.html
+++ b/help/ticket-selection.html
@@ -351,7 +351,7 @@
                                             elementtiming="LCP-target"
                                             class="heading-reset"
                                           >
-                                            <div class="_1yrl4d7p">
+                                            <div class="breadcrumb__text-secondary">
                                               Log in to contact us
                                             </div>
                                           </h1>
