--- a/payments/payment-success.html
+++ b/payments/payment-success.html
@@ -142,7 +142,7 @@
                                         <div class="_1hpgssa1">
                                           <div class="_18raq70">
                                             <h1 id="FMP-target" tabindex="-1" elementtiming="LCP-target" class="heading">
-                                              <div class="_1yrl4d7p">
+                                              <div class="breadcrumb__text-secondary">
                                                 <div>
                                                   Your reservation is confirmed!
                                                 </div>
