--- a/landing-pages/merchandising.html
+++ b/landing-pages/merchandising.html
@@ -4664,7 +4664,7 @@
                                                                                               class="box-border"
                                                                                             >
                                                                                               <div
-                                                                                                class="color_black"
+                                                                                                class="text-dark"
                                                                                               >
                                                                                                 <svg
                                                                                                   viewBox="0 0 32 32"
@@ -5616,7 +5616,7 @@
                                                                                               class="box-border"
                                                                                             >
                                                                                               <div
-                                                                                                class="color_black"
+                                                                                                class="text-dark"
                                                                                               >
                                                                                                 <svg
                                                                                                   viewBox="0 0 32 32"
@@ -6599,7 +6599,7 @@
                                     >
                                       <div
                                         data-test-class="ExploreSectionWrapper"
-                                        class="_11ry7lz"
+                                        class="text-dark"
                                       >
                                         <div
                                           class="animation-name-keyframe"
@@ -7107,7 +7107,7 @@
                                     >
                                       <div
                                         data-test-class="ExploreSectionWrapper"
-                                        class="_11ry7lz"
+                                        class="text-dark"
                                       >
                                         <div
                                           class="animation-name-keyframe"
@@ -7473,7 +7473,7 @@
                                     >
                                       <div
                                         data-test-class="ExploreSectionWrapper"
-                                        class="_11ry7lz"
+                                        class="text-dark"
                                       >
                                         <div
                                           class="animation-name-keyframe"
@@ -9044,7 +9044,7 @@
                                     >
                                       <div
                                         data-test-class="ExploreSectionWrapper"
-                                        class="_11ry7lz"
+                                        class="text-dark"
                                       >
                                         <div
                                           class="animation-name-keyframe"
@@ -9735,7 +9735,7 @@
                                     >
                                       <div
                                         data-test-class="ExploreSectionWrapper"
-                                        class="_11ry7lz"
+                                        class="text-dark"
                                       >
                                         <div
                                           class="animation-name-keyframe"
@@ -10172,7 +10172,7 @@
                                     >
                                       <div
                                         data-test-class="ExploreSectionWrapper"
-                                        class="_11ry7lz"
+                                        class="text-dark"
                                       >
                                         <div
                                           class="animation-name-keyframe"
@@ -14997,7 +14997,7 @@
                                                                                               class="box-border"
                                                                                             >
                                                                                               <div
-                                                                                                class="color_black"
+                                                                                                class="text-dark"
                                                                                               >
                                                                                                 <svg
                                                                                                   viewBox="0 0 32 32"
@@ -15949,7 +15949,7 @@
                                                                                               class="box-border"
                                                                                             >
                                                                                               <div
-                                                                                                class="color_black"
+                                                                                                class="text-dark"
                                                                                               >
                                                                                                 <svg
                                                                                                   viewBox="0 0 32 32"
@@ -16933,7 +16933,7 @@
                               >
                                 <div
                                   data-test-class="ExploreSectionWrapper"
-                                  class="_11ry7lz"
+                                  class="text-dark"
                                 >
                                   <div
                                     class="animation-name-keyframe"
@@ -17659,7 +17659,7 @@
                               >
                                 <div
                                   data-test-class="ExploreSectionWrapper"
-                                  class="_11ry7lz"
+                                  class="text-dark"
                                 >
                                   <div
                                     class="animation-name-keyframe"
@@ -18109,7 +18109,7 @@
                               >
                                 <div
                                   data-test-class="ExploreSectionWrapper"
-                                  class="_11ry7lz"
+                                  class="text-dark"
                                 >
                                   <div
                                     class="animation-name-keyframe"
@@ -22590,7 +22590,7 @@
                               >
                                 <div
                                   data-test-class="ExploreSectionWrapper"
-                                  class="_11ry7lz"
+                                  class="text-dark"
                                 >
                                   <div
                                     class="animation-name-keyframe"
@@ -23484,7 +23484,7 @@
                               >
                                 <div
                                   data-test-class="ExploreSectionWrapper"
-                                  class="_11ry7lz"
+                                  class="text-dark"
                                 >
                                   <div
                                     class="animation-name-keyframe"
@@ -24094,7 +24094,7 @@
                               >
                                 <div
                                   data-test-class="ExploreSectionWrapper"
-                                  class="_11ry7lz"
+                                  class="text-dark"
                                 >
                                   <div
                                     class="animation-name-keyframe"
