--- a/listings-product/rental.html
+++ b/listings-product/rental.html
@@ -4592,7 +4592,7 @@
                                                                                               class="box-border"
                                                                                             >
                                                                                               <div
-                                                                                                class="color_black"
+                                                                                                class="text-dark"
                                                                                               >
                                                                                                 <svg
                                                                                                   viewBox="0 0 32 32"
@@ -5544,7 +5544,7 @@
                                                                                               class="box-border"
                                                                                             >
                                                                                               <div
-                                                                                                class="color_black"
+                                                                                                class="text-dark"
                                                                                               >
                                                                                                 <svg
                                                                                                   viewBox="0 0 32 32"
