--- a/online-experience/calendar.html
+++ b/online-experience/calendar.html
@@ -2330,7 +2330,7 @@
                     class="main-content__details-wrapper"
                   >
                     <section>
-                      <div class="color_black">
+                      <div class="text-dark">
                         <h1
                           tabindex="-1"
                           class="heading"
