--- a/payments/payout-methods.html
+++ b/payments/payout-methods.html
@@ -411,7 +411,7 @@
                                               <h2 class="payout-methods__need-help-text">
                                                 Need help?
                                               </h2>
-                                              <div class="color_black">
+                                              <div class="text-dark">
                                                 <div
                                                   style="
                                                     margin-top: 24px;
@@ -448,7 +448,7 @@
                                                   ></a>
                                                 </div>
                                               </div>
-                                              <div class="color_black">
+                                              <div class="text-dark">
                                                 <div
                                                   style="
                                                     margin-top: 24px;
@@ -484,7 +484,7 @@
                                                   ></a>
                                                 </div>
                                               </div>
-                                              <div class="color_black">
+                                              <div class="text-dark">
                                                 <div
                                                   style="
                                                     margin-top: 24px;
@@ -979,7 +979,7 @@
                                         <div class="payment-methods__notice-container">
                                           <div class="payout-methods__need-help-wrapper">
                                             <h2 class="payout-methods__need-help-text">Need help?</h2>
-                                            <div class="color_black">
+                                            <div class="text-dark">
                                               <div
                                                 style="
                                                   margin-top: 24px;
@@ -1016,7 +1016,7 @@
                                                 ></a>
                                               </div>
                                             </div>
-                                            <div class="color_black">
+                                            <div class="text-dark">
                                               <div
                                                 style="
                                                   margin-top: 24px;
@@ -1052,7 +1052,7 @@
                                                 ></a>
                                               </div>
                                             </div>
-                                            <div class="color_black">
+                                            <div class="text-dark">
                                               <div
                                                 style="
                                                   margin-top: 24px;
