--- a/resource-center/article.html
+++ b/resource-center/article.html
@@ -994,7 +994,7 @@
                           <div class="_dj903s">
                             <div class="_56cas6i">
                               <div class="_cntgei">
-                                <div class="_11ry7lz">
+                                <div class="text-dark">
                                   <div class="_vfwjg3" style="margin-bottom:16px">
                                     <div class="_1xi2lcs">
                                       <h1 id="FMP-target" tabindex="-1" elementtiming="LCP-target" class="heading-reset">Easy
@@ -1075,7 +1075,7 @@
                                   </div>
                                 </div>
                                 <div style="margin-bottom:16px">
-                                  <div class="_11ry7lz">
+                                  <div class="text-dark">
                                     <section>
                                       <div class="text-3xl">
                                         <h2 tabindex="-1" elementtiming="LCP-target" class="heading-reset">1. Start with an
@@ -1103,7 +1103,7 @@
                                   </div>
                                 </div>
                                 <div style="margin-bottom:16px">
-                                  <div class="_11ry7lz">
+                                  <div class="text-dark">
                                     <section>
                                       <div class="text-3xl">
                                           <h2 tabindex="-1" elementtiming="LCP-target" class="heading-reset">2. Adjust your
@@ -1132,7 +1132,7 @@
                                   </div>
                                 </div>
                                 <div style="margin-bottom:16px">
-                                  <div class="_11ry7lz">
+                                  <div class="text-dark">
                                     <section>
                                       <div class="text-3xl">
                                         <h2 tabindex="-1" elementtiming="LCP-target" class="heading-reset">3. Allow
