--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -10986,7 +10986,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                   <div class="_3hmsj">
                                     <div style="display: contents; --dls19-brand-color:var(--gray-900);">
                                       <section>
-                                        <div class="_11ry7lz">
+                                        <div class="text-dark">
                                           <div class="_88xxct">
                                             <div class="_267gg">
                                               <div>
