--- a/online-experience/calendar_week.html
+++ b/online-experience/calendar_week.html
@@ -3875,7 +3875,7 @@
                     class="main-content__details-wrapper"
                   >
                     <section>
-                      <div class="color_black">
+                      <div class="text-dark">
                         <h1
                           tabindex="-1"
                           class="heading"
