--- a/payments/payment-success.html
+++ b/payments/payment-success.html
@@ -222,7 +222,7 @@
                                   </div>
                                   <div class="_1yfvndd"></div>
                                 </div>
-                                <div class="_11ry7lz">
+                                <div class="text-dark">
                                   <section>
                                     <div class="_15c4mce">
                                       <h2 tabindex="-1" class="heading" elementtiming="LCP-target">
