--- a/resource-center/video.html
+++ b/resource-center/video.html
@@ -1001,7 +1001,7 @@
                           <div class="_dj903s">
                               <div class="_56cas6i">
                                   <div class="_cntgei">
-                                      <div class="_11ry7lz">
+                                      <div class="text-dark">
                                           <div class="_vfwjg3" style="margin-bottom:16px">
                                               <div class="_1xi2lcs">
                                                   <h1 id="FMP-target" tabindex="-1" elementtiming="LCP-target" class="heading-reset">
