--- a/payments/payment-success.html
+++ b/payments/payment-success.html
@@ -132,13 +132,13 @@
                             margin-left: 0;
                             margin-right: 0;
                           ">
-                          <div class="_2h22gn">
+                          <div class="-mx-2">
                             <div class="_17mlmq72">
                               <div tabindex="-1" class="">
                                 <section>
                                   <div style="margin-top: 40px">
                                     <div class="_18irxco">
-                                      <div class="_2h22gn">
+                                      <div class="-mx-2">
                                         <div class="_1hpgssa1">
                                           <div class="_18raq70">
                                             <h1 id="FMP-target" tabindex="-1" elementtiming="LCP-target" class="heading">
