--- a/payments/payment-success.html
+++ b/payments/payment-success.html
@@ -288,7 +288,7 @@
                                             Hosted in English
                                           </div>
                                           <span class="_60hvkx2"><span class="visually-hidden dir dir-ltr">Rating 5 out of 5; 2
-                                              reviews</span><span class="_1lzlk52"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" style="
+                                              reviews</span><span class="carousel-slider__text-icon-container "><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" style="
                                                   display: block;
                                                   height: 12px;
                                                   width: 12px;
