carousel-slider__rate

--- a/payments/payment-success.html
+++ b/payments/payment-success.html
@@ -287,7 +287,7 @@
                                           <div class="_1u2f1b1i">
                                             Hosted in English
                                           </div>
-                                          <span class="_60hvkx2"><span class="visually-hidden dir dir-ltr">Rating 5 out of 5; 2
+                                          <span class="carousel-slider__rate"><span class="visually-hidden dir dir-ltr">Rating 5 out of 5; 2
                                               reviews</span><span class="carousel-slider__text-icon-container "><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" style="
                                                   display: block;
                                                   height: 12px;
